--- a/index.html
+++ b/index.html
@@ -37,21 +37,17 @@ html<!DOCTYPE html>
             margin-top: 20px;
         }
     </style>
-</head>
-<body>
-    <div class="container">
-        <h1>¡Bienvenido a mi página web!</h1>
-        <p>Esta es mi primera página web creada con HTML y CSS.</p>
-        <p>Estoy aprendiendo desarrollo web paso a paso y he logrado:</p>
-        <ul>
-            <li>Crear una cuenta en GitHub</li>
-            <li>Conectar GitHub con Netlify</li>
-            <li>Crear mi primer repositorio</li>
-            <li>Escribir código HTML y CSS</li>
-        </ul>
-        <div class="fecha">
-            <strong>Creado el: 16 de mayo de 2025</strong>
-        </div>
-    </div>
-</body>
-</html>
+<style>
+    body {
+        font-family: 'Georgia', serif; /* Cambia la fuente */
+        background-color: #e8f4f8; /* Cambia color de fondo */
+    }
+    h1 {
+        color: #e74c3c; /* Cambia color del título */
+        border-bottom: 3px solid #f39c12; /* Cambia color de línea */
+    }
+    .container {
+        background-color: #ffffff;
+        border: 2px solid #3498db; /* Agregar borde */
+    }
+</style>
