--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ html<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Primera Página Web</title>
+    <img src="/api/placeholder/400/300" alt="Mi imagen personal" style="width: 100%; max-width: 400px; border-radius: 10px; margin: 20px 0;">
     <style>
         body {
             font-family: Arial, sans-serif;
